tests/negative/runtime/glyphat_large_index/input.ci
void main() {
    print(glyphAt("abc", 99) + "\n");
}
